--- a/templates/verify_account.html
+++ b/templates/verify_account.html
@@ -9,7 +9,7 @@
     <p>Welcome {{ user.username }}</p>
     <p>
     Before you start using <b>Swapin</b> we need you to do one last thing.
-    <br>Please visit this link: "localhost:8000/users/verify/"
+    <br>Please visit this link: "swapin.herokuapp.com/users/verify/"
     </p>
     <p>And in the field box, put this code: <b>{{ token }}</b> and send it!
         <br>Thats all, thanks for use swapin!
