--- a/templates/verify_account.html
+++ b/templates/verify_account.html
@@ -11,8 +11,8 @@
     Before you start using <b>Swapin</b> we need you to do one last thing.
     <br>Please visit this link: "https://swapin.herokuapp.com/users/verify/"
     </p>
-    <p>And in the field box, put this code: <b>{{ token }}</b> and send it!
-        <br>Thats all, thanks for use swapin!
+    <p>And in the field box, put this code: <b>{{ token }}</b>
+        <br>send it, and thats all, thanks for use swapin!
     </p>
 </p>
 </body>
