--- a/templates/verify_account.html
+++ b/templates/verify_account.html
@@ -9,10 +9,8 @@
     <p>Welcome {{ user.username }}</p>
     <p>
     Before you start using <b>Swapin</b> we need you to do one last thing.
-    <br>Please visit this link: "https://swapin.herokuapp.com/users/verify/"
-    </p>
-    <p>And in the field box, put this code: <b>{{ token }}</b>
-        <br>send it, and thats all, thanks for use swapin!
+    <br>Please click this button to verify your account
+    <button type="submit"> GO </button>
     </p>
 </body>
 </html>
