--- a/templates/verify_account.html
+++ b/templates/verify_account.html
@@ -9,6 +9,6 @@
     <p>Welcome {{ user.username }}</p>
     Before you start using <b>Swapin</b> we need you to do one last thing.
     <p>Please click this link to verify your account</p>
-    <p>https://localhost:8000/users/verify/?token={{ token }}</p>
+    <p>https://swapin.herokuapp.com/users/verify/?token={{ token }}</p>
 </body>
 </html>
